# RobotARM

./: .gitignore  README.md  pyproject.toml  ubuntu_cmd
ArmDriver/: ArmDriver.py  DM_CAN.py  follower.py  leader.py  leader.py.bak  servo_leader.py
ArmDriver/urdf/config/: joint_names_urdf.yaml
ArmDriver/urdf/meshes/: Link1.STL  Link2.STL  Link3.STL  base_link.STL  paw_L.STL  paw_R.STL
ArmDriver/urdf/urdf/: arm.xml  arm_urdf.csv  arm_urdf.urdf  urdf.csv  urdf.urdf
simulation/: joy_ee_control.py  joycon_test_read_CN.py  key_ee_control.py  key_q_control.py  real2sim.py  test.py
test/: dyna_double_arm.py  dyna_single_arm.py  follower_arm_read_param.py  leader_arm_real2sim.py  lerobot_telecontrol.py  lerobot_telecontrol_uarm.py  lerobot_telecontrol_uarm_mujoco.py  read_param.py  test_double_arm.py
tool/DmArm/: follower_arm_read_param.py  leader_arm_read_param.py
tool/uarm/: change_baudrate.py  test_new_baudrate.py
